crates/toml_edit/tests/fixtures/invalid/table/redefine.stderr
TOML parse error at line 5, column 1
  |
5 | [a.b]
  | ^
Invalid table header
Duplicate key `b` in table `a`
